# vpook

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
apps/: overlay_service.py  overlay_service_args.py  overlay_service_logging.py
src/vpook/: __init__.py  app.py  config.py  models.py
src/vpook/audio/: __init__.py  base.py  fake_provider.py  windows_audio_session_provider.py  windows_wasapi_provider.py
src/vpook/overlay/: app.js  index.html  styles.css
src/vpook/state/: __init__.py  voice_state.py
src/vpook/transport/: __init__.py  static_server.py  websocket_server.py
tests/: conftest.py  test_app_and_providers.py
vpook/: __init__.py
